--- a/index.html
+++ b/index.html
@@ -1,4 +1,35 @@
-<?php include 'includes/header.php' ?>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Harry Tate - Junior Front End Web Developer</title>
+  <meta name="author" content="name">
+  <meta name="description" content="description here">
+  <meta name="keywords" content="Web Developer, web design, freelance websites">
+  <!--TODO gulp these together -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__logo">
+      <span class="logo--text">Harry Tate</span>
+    </div>
+    <div class="header__burger">
+      <i class="fas fa-bars burger__menu"></i>
+    </div>
+    <nav class="header__nav">
+      <ul class="nav__list">
+        <li class="nav__item">About</li>
+        <li class="nav__item">Work</li>
+        <li class="nav__item">Contact</li>
+      </ul>
+    </nav>
+  </header>
 <div class="hero">
   <div class="hero__background">
     <div class="hero__text">
@@ -115,20 +146,7 @@
     <a href="https://www.linkedin.com/in/harry-tate-0576a814b/">Linkedin</a>
     <a href="mailto:harry@harrytate.co.uk">harry@harrytate.co.uk</a>
   </section>
-  <!-- <section class="padding-md">
-  </section>
-  <section class="work">
-    <h2>My previous work</h2>
-    <h3>Drone Aerial Surveying</h3>
-  </section>
-  <section class="experience">
-    <h2>Who I've worked with</h2>
-    <h3>CMI</h3>
-  </section>
- 
-</main>
-<footer>
-</footer>
--->
-
-  <?php include 'includes/footer.php' ?>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
+</body>
+</html>
